# EEE4022S-VSRoboArm

./: readme.txt  ros_image_saver.py
arduino_code/to_arduino/: to_arduino.ino
arm_bringup/: CMakeLists.txt  package.xml
arm_bringup/config/control/: hardware_interface.yaml
arm_bringup/config/rviz/: rviz_real.rviz  rviz_sim.rviz  view_arm.rviz
arm_bringup/config/start/: serial_params.yaml
arm_bringup/launch/: move_group_pyton_test.launch  moveit.launch  moveit_with_start.launch  real_bringup.launch  rviz.launch  rviz_sim.launch  serial.launch  sim_bringup.launch  view_arm.launch
arm_bringup/scripts/: TEMPLATE_pick_place_client.py  TEMPLATE_traj_exec.py  moveit_command.py  moveit_msgs.msg  moveit_test.py  pos_exec.py  set_start_pos.py
arm_bringup/src/: pub_to_arduino_class.cpp
arm_bringup/worlds/: my_world.world
arm_description/: CMakeLists.txt  package.xml
arm_description/urdf/: arm_gazebo.urdf  arm_gazebo.urdf.xacro  arm_real.urdf
arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: arm.srdf  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
arm_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
my_hardware_interface/: CMakeLists.txt  README.md  package.xml
my_hardware_interface/myrobot_control/: package.xml
my_hardware_interface/src/: generic_hw_interface.cpp
safe_spawner/: launch_image_view.sh  launch_sim.sh  safe_spawner_real.sh  safe_spawner_sim.sh  spawn_target.sh
(+6 files in other folders)
